test --amend five DuerOS-Cloud

--- a/test/testgit.html
+++ b/test/testgit.html
@@ -7,6 +7,10 @@
 <body>
     <div>
         <span>learn git one</span>
+        <span>learn git two</span>
+        <span>learn git three</span>
+        <span>learn git four</span>
+        <span>learn git five</span>
     </div>
 </body>
 </html>
