add three.js PPT

--- a/test/testgit.html
+++ b/test/testgit.html
@@ -12,5 +12,8 @@
         <span>learn git four</span>
         <span>learn git five</span>
     </div>
+    <div>
+        <span>git testgit1 one</span>
+    </div>
 </body>
 </html>
