--- a/learnTree/jiansuqi.html
+++ b/learnTree/jiansuqi.html
@@ -39,41 +39,46 @@
         scene.add(camera);//把相机添加到场景中
         var loader = new THREE.OBJLoader();//在init函数中，创建loader变量，用于导入模型
         loader.load('./asm_me.obj', function(obj) {//第一个表示模型路径，第二个表示完成导入后的回调函数，一般我们需要在这个回调函数中将导入的模型添加到场景中;
+            var childcounts = obj.children.length;
+            // var s = new THREE.Mesh(new THREE.CircleGeometry(400, childcounts + 1), new THREE.MeshBasicMaterial({
+            //     color: 0xfff000,
+            //     wireframe: true
+            // }));
+            // scene.add(s);
+            // 计算位置
+            function position(radius, count, key) {
+                //周长
+                var circleLength = 2*radius*Math.PI;
+                var hudu = circleLength/count;
+                var jiaodu = hudu/radius*key;
+                console.log(jiaodu);
+                var x = radius*Math.cos(jiaodu);
+                var y = radius*Math.sin(jiaodu);
+                return {
+                    _x:x,
+                    _y:y
+                }
+            }
+            function position1(geometry) {
+                var geo = new THREE.Geometry()
+                var line = new THREE.Line()
+            }
+            var count = 1;
             obj.traverse(function(child) {
                 if (child instanceof THREE.Mesh) {
                     console.log(child);
                     // child = new THREE.Mesh(child.geometry, new THREE.MeshLambertMaterial({color: 0xff0000}));
-                   // child.material = new THREE.MeshLambertMaterial({color: 0xffffff});
-                    child.scale.set(0.03,0.03,0.03)
+                    // child.material = new THREE.MeshLambertMaterial({color: 0xffffff});
+                    child.scale.set(0.03,0.03,0.03);
+                    child.geometry.computeBoundingBox();
+                    console.log(child.geometry);
+                    var xy = position(1500,childcounts + 1,count);
+                    console.log(xy);
+                    child.position.set(xy._x,xy._y, 200);
+
                 }
-                if (child.name === "1") {
-                    // child.material = new THREE.MeshLambertMaterial({color: 0xff0000});
-                    // child.position.set(0,-100,0);
-                    var matrix = new THREE.Matrix4;
-                    matrix.setPosition(new THREE.Vector3(10,100,50));
-                    child.modelViewMatrix = matrix;
-                    child.position.set(10,-100,50);
-                    console.log('matrix');
-                    console.log(child.matrix);
-                    console.log("matrixWorld");
-                    console.log(child.matrixWorld);
-                    console.log('modelViewMatrix');
-                    console.log(child.modelViewMatrix);
-                    console.log('normalMatrix');
-                    console.log(child.normalMatrix);
-                }
-                if(child.name === '2') {
-                    child.material = new THREE.MeshPhongMaterial({color: 0x0000ff});
-                    child.position.set(0,0,200);
-                }
-                if(child.name === '3') {
-                     child.material = new THREE.MeshPhongMaterial({color: 0x00ff00});
-                    child.position.set(0,0,-200);
-                }
-                if(child.name === '4') {
-                    child.material = new THREE.MeshPhongMaterial({color: 0x00ff00});
-                    child.position.set(200,0,0);
-                }
+                count++;
+
             });
             // // 模型座标
             // mesh = obj;//储存到全局变量中
